infra/k8s/flagger-loadtester-authpolicy.yaml
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: allow-flagger-to-loadtester
  namespace: memoire-app
spec:
  targetRef:
    group: core
    kind: ServiceAccount
    name: flagger-loadtester
  requiredAuthenticationRefs:
    - name: flagger
      kind: MeshTLSAuthentication
      group: policy.linkerd.io/v1alpha1
